# lesphynx

./: AGENT_PETANQUE_MARSEILLAIS.md  MCP_PETANQUE_README.md  RENDER_DEPLOY.md  curl_commands.sh  curl_examples.md  main.py  petanque_server.py  pyproject.toml  render.yaml  requirements.txt  test_petanque.py  visualizer.html
